# ai_project2

./: .gitignore  AGENTS.md  Dockerfile  HOWTO.md  INWORK.md  PLAN2.md  PLAN3.md  README.md  README2.md  WHATDONE.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: admin_provisioning.md  data_retention.md  integration_quickstart.md  pilot_checklist.md  production_checklist.md  webhooks.md
examples/: buyer_agent.py  vendor_bot.py
intentbid/app/: __init__.py  main.py
intentbid/scripts/: seed_demo.py  vendor_simulator.py
intentbid/sdk/: __init__.py  client.py
intentbid/tests/: conftest.py  test_admin_subscription_provisioning.py  test_alembic_migrations.py  test_api_docs_copy.py  test_automation_guide.py  test_award_offer_tracking.py  test_billing_limits.py  test_buyer_api.py  test_buyer_dashboard.py  test_buyer_plan_limits.py  test_buyer_rfo_list_api.py  test_buyer_rfo_offers_list.py  test_dashboard.py  test_dashboard_plan_usage.py  test_dashboard_ru.py  test_docker_compose_build_network.py  test_dockerfile.py  test_end_to_end_flow.py  test_hardware_rfo_auth.py  test_hardware_rfo_offer_flow.py  test_health.py  test_idempotency.py  test_landing_page.py  test_observability.py  test_offer_revisions.py  test_offer_validation.py  test_offers_api.py  test_part_schema.py  test_priority_rfq.py  test_quote_deadline.py  test_rate_limiting.py  test_readiness.py  test_readme_overview.py  test_recommendation_auto_award.py  test_rfo_api.py  test_rfo_clone.py  (+29 more)
postman/: intentbid.postman_collection.json
scripts/: start_dashboard.sh
(+76 files in other folders)
