[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intentbid"
version = "0.1.0"
description = "IntentBid MVP service"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlmodel>=0.0.16",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "jinja2>=3.1",
  "httpx>=0.26",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["intentbid*"]

[tool.setuptools.package-data]
"intentbid.app" = ["templates/**/*.html"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["intentbid/tests"]
